syntax = "proto3";

package program04;

import "google/protobuf/empty.proto";

option java_package = "com.partha.program04";
option java_multiple_files = true;

message BalanceCheckRequest{
  int32 account_number=1;
}

message AccountBalance {
  int32  account_number=1;
  int32 balance=2;
}

message AllAccountsResponse{
  repeated AccountBalance accounts=1;
}

service BankService{
  //unary
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);

  //note how we are letting it know that this service doesnt take any request parameter
  rpc GetAllAccounts(google.protobuf.Empty) returns (AllAccountsResponse);
}